<resources>
    <string name="app_name">AndroidApp</string>
    <string name="action_settings">Settings</string>
    <string name="stop">Stop</string>
    <string name="record">Record</string>
    <string name="play_area">Play Area</string>
    <string name="play">Play</string>
    <string name="stopPlay">Stop Play</string>
    <string name="record_area">Record Area</string>
    <string name="delete">Delete</string>
</resources>
