<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="371dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#efa51c"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/play_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp"
            android:text="@string/play_area" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btnPlay"
            android:layout_centerHorizontal="true"
            android:text="@string/stopPlay"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="259dp"
            tools:layout_editor_absoluteY="220dp" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="29dp"
            android:layout_marginStart="25dp"
            android:text="@string/play"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="220dp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btnStop"
            android:layout_marginEnd="24dp"
            android:text="Delete" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="306dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#497a5c">

        <Button
            android:id="@+id/btnStopRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="36dp"
            android:layout_marginEnd="24dp"
            android:text="@string/stop"
            tools:layout_editor_absoluteX="261dp"
            tools:layout_editor_absoluteY="224dp" />

        <Button
            android:id="@+id/btnStartRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/btnStopRecord"
            android:layout_marginStart="24dp"
            android:text="@string/record"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="224dp" />

        <TextView
            android:id="@+id/record_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/record_area" />

    </RelativeLayout>

</RelativeLayout>